--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <packaging>pom</packaging>
   <developers>
     <developer>
-      <id>arcili</id>
+      <id>arcilli</id>
       <name>Gabriel Răileanu</name>
       <organization>XWiki SAS</organization>
       <organizationUrl>http://www.xwiki.com</organizationUrl>
