--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>org.xwiki.contrib</groupId>
     <artifactId>parent-platform</artifactId>
-    <version>12.10</version>
+    <version>12.10.4</version>
   </parent>
   <artifactId>api-rights</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -61,7 +61,7 @@
   </scm>
   <properties>
     <xwiki.release.jira.skip>false</xwiki.release.jira.skip>
-    <xwiki.issueManagement.jira.id>XAP</xwiki.issueManagement.jira.id>
+    <xwiki.issueManagement.jira.id>RIGHTSAPI</xwiki.issueManagement.jira.id>
     <commons.version>12.10.4</commons.version>
     <platform.version>12.10.4</platform.version>
     <xwiki.enforcer.skip>true</xwiki.enforcer.skip>
