--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <version>12.10.4</version>
   </parent>
   <artifactId>api-rights</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-rc-1</version>
   <name>XWiki Rights API - Parent</name>
   <packaging>pom</packaging>
   <developers>
@@ -56,7 +56,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/api-rights.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/api-rights.git</developerConnection>
     <url>https://github.com/xwiki-contrib/api-rights/tree/master</url>
-    <tag>HEAD</tag>
+    <tag>api-rights-1.0-rc-1</tag>
   </scm>
   <properties>
     <xwiki.release.jira.skip>false</xwiki.release.jira.skip>
