--- a/api-rights-bridge/pom.xml
+++ b/api-rights-bridge/pom.xml
@@ -24,7 +24,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.xwiki.contrib</groupId>
+    <groupId>org.xwiki.contrib.api-rights</groupId>
     <artifactId>api-rights</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -56,7 +56,7 @@
       <version>${platform.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.xwiki.contrib</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>api-rights-api</artifactId>
       <version>${project.version}</version>
     </dependency>
