--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <artifactId>parent-platform</artifactId>
     <version>12.10.4</version>
   </parent>
+  <groupId>org.xwiki.contrib.api-rights</groupId>
   <artifactId>api-rights</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>XWiki Rights API - Parent</name>
