RIGHTSAPI-4: Replace rights objects instead of deleting and adding new objects * Implemented component responsible with objects persistence, used by the writer * 2 implementations exist now: the incrementing numbers one (still used by the default writer) and the recycling objects one * Refactored tests to test separately the actual functioning of the rights writer - regardless of strategy - and the recycling strategy * Default strategy is still the numbers incrementing strategy

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
     <commons.version>12.10.4</commons.version>
     <platform.version>12.10.4</platform.version>
     <xwiki.enforcer.skip>true</xwiki.enforcer.skip>
+    <!-- Skip the execution of revapi, at least for now. -->
+    <xwiki.revapi.skip>true</xwiki.revapi.skip>
   </properties>
   <dependencies>
     <dependency>
