--- a/api-rights-api/pom.xml
+++ b/api-rights-api/pom.xml
@@ -20,13 +20,12 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.contrib.api-rights</groupId>
     <artifactId>api-rights</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-rc-2</version>
   </parent>
   <artifactId>api-rights-api</artifactId>
   <name>XWiki Rights API - API</name>
