Revert "[maven-release-plugin] prepare release api-rights-1.0-rc-2"
This reverts commit a4d13ee33a95263cba7cbdbbc49003a710c69ff2.

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.contrib</groupId>
@@ -29,7 +30,7 @@
   </parent>
   <groupId>org.xwiki.contrib.api-rights</groupId>
   <artifactId>api-rights</artifactId>
-  <version>1.0-rc-2</version>
+  <version>1.0-SNAPSHOT</version>
   <name>XWiki Rights API - Parent</name>
   <packaging>pom</packaging>
   <developers>
@@ -57,7 +58,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/api-rights.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/api-rights.git</developerConnection>
     <url>https://github.com/xwiki-contrib/api-rights/tree/master</url>
-    <tag>api-rights-1.0-rc-2</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <xwiki.release.jira.skip>false</xwiki.release.jira.skip>
