RIGHTSAPI-19 Add API to get all actual rules that apply to an entity (inherited ones) * Move getActualRules method from simplerights API   * Use SecurityReference instead of XWikiBridge to get parent security reference * Move tests from simplerights API   * Update componentList   * Use XWikiSecurityRule instead of WritableSecurityRuleImpl

--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,6 @@
   <modules>
     <module>api-rights-api</module>
     <module>api-rights-bridge</module>
+    <module>api-rights-test</module>
   </modules>
 </project>
