--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
       <organization>XWiki SAS</organization>
       <organizationUrl>http://www.xwiki.com</organizationUrl>
     </developer>
+    <developer>
+      <id>cdesableau</id>
+      <name>Clément Desableau</name>
+      <organization>XWiki SAS</organization>
+      <organizationUrl>http://www.xwiki.com</organizationUrl>
+    </developer>
   </developers>
   <distributionManagement>
     <repository>
