[Misc] Fix missing coverage property.

--- a/api-rights-bridge/pom.xml
+++ b/api-rights-bridge/pom.xml
@@ -33,6 +33,9 @@
     later
   </description>
   <packaging>jar</packaging>
+  <properties>
+    <xwiki.jacoco.instructionRatio>0.32</xwiki.jacoco.instructionRatio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
