[maven-release-plugin] prepare release api-rights-2.0-rc-1

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   </parent>
   <groupId>org.xwiki.contrib.api-rights</groupId>
   <artifactId>api-rights</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>2.0-rc-1</version>
   <name>XWiki Rights API - Parent</name>
   <packaging>pom</packaging>
   <developers>
@@ -63,7 +63,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/api-rights.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/api-rights.git</developerConnection>
     <url>https://github.com/xwiki-contrib/api-rights/tree/master</url>
-    <tag>HEAD</tag>
+    <tag>api-rights-2.0-rc-1</tag>
   </scm>
   <properties>
     <xwiki.release.jira.skip>false</xwiki.release.jira.skip>
