--- a/api-rights-bridge/pom.xml
+++ b/api-rights-bridge/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.api-rights</groupId>
     <artifactId>api-rights</artifactId>
-    <version>2.0-rc-7-SNAPSHOT</version>
+    <version>2.0</version>
   </parent>
   <artifactId>api-rights-bridge</artifactId>
   <name>XWiki Rights API - Bridge</name>
