RIGHTSAPI-38 : Add APIs to help extract rules from a set of rules based on unique subject and subject type * Add a dependency to apache commons-lang3 (for org.apache.commons.lang3.tuple.*)

--- a/api-rights-api/pom.xml
+++ b/api-rights-api/pom.xml
@@ -49,5 +49,9 @@
       <artifactId>xwiki-platform-security-authorization-bridge</artifactId>
       <version>${platform.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
   </dependencies>
 </project>
