--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
       <organization>XWiki SAS</organization>
       <organizationUrl>http://www.xwiki.com</organizationUrl>
     </developer>
+    <developer>
+      <id>mouhb</id>
+      <name>Mohamed Boussaa</name>
+      <organization>XWiki SAS</organization>
+      <organizationUrl>http://www.xwiki.com</organizationUrl>
+    </developer>
   </developers>
   <distributionManagement>
     <repository>
