--- a/api-rights-test/pom.xml
+++ b/api-rights-test/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.api-rights</groupId>
     <artifactId>api-rights</artifactId>
-    <version>2.2</version>
+    <version>2.3-SNAPSHOT</version>
   </parent>
   <artifactId>api-rights-test</artifactId>
   <name>XWiki Rights API - Tests</name>
