--- a/api-rights-api/pom.xml
+++ b/api-rights-api/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.api-rights</groupId>
     <artifactId>api-rights</artifactId>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
   </parent>
   <artifactId>api-rights-api</artifactId>
   <name>XWiki Rights API - API</name>
